--- a/2019-09-12.md
+++ b/2019-09-12.md
@@ -3,83 +3,83 @@ title: 程序员·一周工作汇报
 author: William Fang
 mode  : selfcontained
 framework: impressjs
-github:
-  user: william
-  repo: myslidify
+# github:
+#   user: william
+#   repo: myslidify
 url:
-  lib: ../libraries
+  lib: ./libraries
 ## =============================================================================
 
---- #title x:0 y:0 scale:1
+--- #title x:0 y:0 z:-5000 scale:2.5 rot:90
 # 一周工作汇报^*
 <span class="footnote">^* William Fang</span>
 
 --- .slide x:-1000 y:-1500
 
-<q>Aren't you just **bored** with all those slides-based presentations?</q>
+<q>做一个有艺术追求的码农</q>
+    
+    - 写代码
+        - 交易系统
+        - 数据分析
+    - 自动化
+        - Linux 运维
+        - 感谢小助手：脚本同志
+    - 文艺范
+        - LaTeX
+        - 个人博客
 
 --- .slide x:0 y:-1500
 
-<q>Don't you think that presentations given **in modern browsers** shouldn't **copy the limits** of 'classic' slide decks?</q>
+<q>交易系统</q>
+    
+    [X] CtaTrader_IndexFutures
+        - SimNow
+        - hytz1
+    [ ] c++ 版本上线测试
+    [ ] python3.0 升级计划
+    [ ] 新的交易接口开发
+        - 华鑫顶点 tora
+
 
 --- .slide x:1000 y:-1500
 
-<q>Would you like to **impress your audience** with **stunning visualization** of your talk?</q>
+<q>数据更新</q>
+    
+    [X] ChinaFutures/HistoryData
+        - 2010.04.16 ~ 2019.08.31
+        - 增加多个数据源核对
+        - 增加 InfoData
+    [ ] ChinaStocks
+        - L1 数据自动回传与入库
+        - L2 每日盘后 rsyncs
+        - 其他数据：正在写脚本 
 
+--- .slide x:2000 y:-1500
+<br/>
+<br/>
+<br/>
+<q>人的潜能到底有多大？</q>
 
---- #its x:850 y:3000 rot:45 scale:5
+--- .slide x:2000 y:-2500
+<br/>
+<br/>
+<br/>
+<q>每周设定一个小目标</q>
 
- It's a **presentation tool** <br/>
-inspired by the idea behind [prezi.com](http://prezi.com) <br/>
-and based on the **power of CSS3 transforms and transitions** in modern browsers.
+--- .slide x:2000 y:-2500 z:-1000 
+<br/>
+<br/>
+<br/>
+<q>然后**踏踏实实**的去完成</q>
 
 --- #big x:3500 y:2100 rot:180 scale:6
 
-visualize your <b>big</b> <span class="thoughts">thoughts</span>
+go <b>BIG</b> <span class="thoughts">or go home</span>
 
---- #tiny x:2825 y:2325 z:-3000 rot:300 scale:1
+--- #one-more-thing x:2825 y:2125 z:-3000 rot:330 scale:1
 
-and **tiny** ideas
+比更好...
 
---- #ing x:3500 y:-850 rot:270 scale:6
-by <b class="positioning">positioning</b>, <b class="rotating">rotating</b> and <b class="scaling">scaling</b> them on an infinite canvas
+--- #its-in-3d x:2925 y:2325 z:-3500 rotx:10 scale:5
 
---- #imagination x:6700 y:-300 scale:6
-
-the only **limit** is your <b class="imagination">imagination</b>
-
---- #source x:6300 y:2000 rot:20 scale:4
-
-want to know more?
-
-<q>[use the source](http://github.com/bartaz/impress.js), Luke</q>
-
---- #one-more-thing x:6000 y:4000 scale:2
-
-one more thing...
-
---- #its-in-3d x:6200 y:4300 z:-100 rotx:-40 roty:-10 scale:2
-
-<span class="have">have</span> <span class="you">you</span> <span class="noticed">noticed</span> <span class="its">it's</span> <span class="in">in</span> <b>3D<sup>*</sup></b>?
-
-<span class="footnote">* beat that, prezi ;)</span>
-
---- #rstats x:-1000 y:5000
-
-
-```r
-library(ggplot2)
-qplot(wt, mpg, data = mtcars)
-```
-
---- x:-1500 y:5500
-
-
-```
-## Error in eval(expr, envir, enclos): object 'opts_chunk' not found
-```
-
-![plot of chunk unnamed-chunk-2](assets/fig/unnamed-chunk-2-1.png)
-
-
-  
+<b>再好一点</b>
