--- a/2019-09-12.Rmd
+++ b/2019-09-12.Rmd
@@ -34,7 +34,7 @@ url:
     
     [X] CtaTrader_IndexFutures
         - SimNow
-        - hytz1
+        - hytz1_futures
     [ ] c++ 版本上线测试
     [ ] python3.0 升级计划
     [ ] 新的交易接口开发
@@ -50,36 +50,30 @@ url:
         - 增加多个数据源核对
         - 增加 InfoData
     [ ] ChinaStocks
-        - L1 数据自动回传与入库
-        - L2 每日盘后 rsyncs
+        [X] L1 数据自动回传与入库
+        [X] L2 每日盘后 rsyncs
         - 其他数据：正在写脚本 
 
---- .slide x:2000 y:-1500
-<br/>
-<br/>
-<br/>
-<q>人的潜能到底有多大？</q>
-
---- .slide x:2000 y:-2500
-<br/>
-<br/>
-<br/>
-<q>每周设定一个小目标</q>
-
---- .slide x:2000 y:-2500 z:-1000 
-<br/>
-<br/>
-<br/>
-<q>然后**踏踏实实**的去完成</q>
-
 --- #big x:3500 y:2100 rot:180 scale:6
+next week <b>计划</b> <span class="thoughts">......</span>
 
-go <b>BIG</b> <span class="thoughts">or go home</span>
 
---- #one-more-thing x:2825 y:2125 z:-3000 rot:330 scale:1
+--- #next-week x:2825 y:2125 z:-3000 rot:330 scale:1.5
 
-比更好...
+<q>+ 交易系统</q>
+    <ul>
+        <li><font color="orange">股票交易：稳定运行</font>
+        <li><font color="orange">股指期货：交易监控</font>
+        <li><font color="orange">python3.0：系统升级</font>
+    </ul>
 
---- #better x:2925 y:2325 z:-3500 rotx:10 scale:10
+<q>+ 数据更新</q>
+    <ul>
+        <li><font color="orange">股票：TickData/BarData 入库更新</font><br/>
+        <li><font color="orange">JoinQuant：数据自动更新</font>
+    </ul>
 
-<b>再好一点</b>
+<q>+ 研究</q>
+    <ul>
+       <li><font color="orange">搭建研究回测平台：HiResearch</font>
+    </ul>
